Whitelist this package too.